overflow issue fixed

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -3,7 +3,7 @@
 
 body
     position: relative
-    overflow: hidden
+    overflow-x: hidden
 
 main
     .hero
